--- a/index.html
+++ b/index.html
@@ -1,123 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My CV</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+<body>
+    <div class="container">
+        <h3>1. Data Pribadi</h3>
+        <table class="table">
+            <tr>
+                <td rowspan="7" class="photo"><img src="IMG-20220726-WA0035.jpg" alt="FOTO"></td>
+                <th>Nama</th>
+                <td>Muhammad Nurman</td>
+            </tr>
+            <tr>
+                <th>Tempat, Tanggal Lahir</th>
+                <td>Jambi, 06 Mei 2004</td>
+            </tr>
+            <tr>
+                <th>Jenis Kelamin</th>
+                <td>Laki-Laki</td>
+            </tr>
+            <tr>
+                <th>Agama</th>
+                <td>Islam</td>
+            </tr>
+            <tr>
+                <th>Pendidikan</th>
+                <td>Sarjana (S1) Sistem Informasi</td>
+            </tr>
+            <tr>
+                <th>Kebangsaan</th>
+                <td>Indonesia</td>
+            </tr>
+            <tr>
+                <th>Alamat</th>
+                <td>Jambi, Eka Jaya, Kec. Jambi Sel., Kota Jambi, Jambi</td>
+            </tr>
+        </table>
+        <div class="description">
+            <h3>2. Deskripsi Singkat (Ceritakan singkat tentang diri Anda)</h3>
+            <div id="deskripsi">Saya adalah sarjana S1 lulusan Program Studi Sistem Informasi dengan minat khusus dalam pengembangan perangkat lunak. Memiliki pemahaman yang kuat tentang konsep-konsep dasar sistem informasi dan sedang memperdalam keterampilan pemrograman. Berfokus pada pengembangan keterampilan dalam bahasa pemrograman seperti HTML, CSS, JavaScript, PHP, Java, serta belajar untuk menerapkan konsep-konsep penting dalam pengembangan sistem informasi. Selama studi saya, saya telah terlibat dalam beberapa proyek pengembangan perangkat lunak, yang membantu saya memperluas pemahaman dan keterampilan praktis saya. Saya memiliki semangat yang besar untuk belajar dan berinovasi dalam dunia teknologi informasi, serta siap untuk mengambil tantangan baru yang akan mengembangkan kemampuan saya sebagai seorang profesional di bidang sistem informasi.</div>
+        </div>
+        <h3>3. Kontak</h3>
+        <table class="table">
+            <tr>
+                <th>Nomor Telp</th>
+                <td>+6282371697660</td>
+            </tr>
+            <tr>
+                <th>Email</th>
+                <td>nurmanmuhammad52@gmail.com</td>
+            </tr>
+            <tr>
+                <th>Media Sosial</th>
+                <td>
+                    <ol>
+                        <li>Facebook (Muhammad Nurman)</li>
+                        <li>Instagram (@nurman5454)</li>
+                    </ol>
+                </td>
+            </tr>
+        </table>
 
-<body class="bg-gray-100">
-    <div class="container mx-auto p-4">
-        <h3 class="text-xl font-bold">1. Data Pribadi</h3>
-        <div class="overflow-x-auto">
-            <table class="table-auto w-full mb-4 border border-black">
-                <tbody>
-                    <tr>
-                        <td rowspan="7" class="photo w-32 border-2 border-black">
-                            <img src="IMG-20220726-WA0035.jpg" alt="FOTO" class="w-full h-auto block">
-                        </td>
-                        <td class="font-bold pr-4 border-2 border-black">Nama</td>
-                        <td class="border-2 border-black">Muhammad Nurman</td>
-                    </tr>
-                    <tr>
-                        <td class="font-bold pr-4 border-2 border-black">Tempat, Tanggal Lahir</td>
-                        <td class="border-2 border-black">Jambi, 06 Mei 2004</td>
-                    </tr>
-                    <tr>
-                        <td class="font-bold pr-4 border-2 border-black">Jenis Kelamin</td>
-                        <td class="border-2 border-black">Laki-Laki</td>
-                    </tr>
-                    <tr>
-                        <td class="font-bold pr-4 border-2 border-black">Agama</td>
-                        <td class="border-2 border-black">Islam</td>
-                    </tr>
-                    <tr>
-                        <td class="font-bold pr-4 border-2 border-black">Pendidikan</td>
-                        <td class="border-2 border-black">Sarjana (S1) Sistem Informasi</td>
-                    </tr>
-                    <tr>
-                        <td class="font-bold pr-4 border-2 border-black">Kebangsaan</td>
-                        <td class="border-2 border-black">Indonesia</td>
-                    </tr>
-                    <tr>
-                        <td class="font-bold pr-4 border-2 border-black">Alamat</td>
-                        <td class="border-2 border-black">Jambi, Eka Jaya, Kec. Jambi Sel., Kota Jambi, Jambi</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="mb-6">
-            <h3 class="text-xl font-bold">2. Deskripsi Singkat</h3>
-            <p class="w-full bg-white border border-black p-4">Saya adalah sarjana S1 lulusan Program Studi Sistem Informasi dengan minat khusus dalam pengembangan perangkat lunak. Memiliki pemahaman yang kuat tentang konsep-konsep dasar sistem informasi dan sedang memperdalam keterampilan pemrograman. Berfokus pada pengembangan keterampilan dalam bahasa pemrograman seperti HTML, CSS, JavaScript, PHP, Java, serta belajar untuk menerapkan konsep-konsep penting dalam pengembangan sistem informasi. Selama studi saya, saya telah terlibat dalam beberapa proyek pengembangan perangkat lunak, yang membantu saya memperluas pemahaman dan keterampilan praktis saya. Saya memiliki semangat yang besar untuk belajar dan berinovasi dalam dunia teknologi informasi, serta siap untuk mengambil tantangan baru yang akan mengembangkan kemampuan saya sebagai seorang profesional di bidang sistem informasi.</p>
-        </div>
-        <h3 class="text-xl font-bold">3. Kontak</h3>
-        <div class="overflow-x-auto">
-            <table class="table-auto w-full mb-4 border border-black">
-                <tbody>
-                    <tr>
-                        <td class="font-bold pr-4 border-2 border-black">Nomor Telp</td>
-                        <td class="border-2 border-black">+6282371697660</td>
-                    </tr>
-                    <tr>
-                        <td class="font-bold pr-4 border-2 border-black">Email</td>
-                        <td class="border-2 border-black">nurmanmuhammad52@gmail.com</td>
-                    </tr>
-                    <tr>
-                        <td class="font-bold pr-4 border-2 border-black">Media Sosial</td>
-                        <td class="border-2 border-black">
-                            <ol>
-                                <li>Facebook (Muhammad Nurman)</li>
-                                <li>Instagram (@nurman5454)</li>
-                            </ol>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <h3 class="text-xl font-bold">4. Riwayat Pendidikan</h3>
-        <ul class="list-disc pl-4">
+        <h3>4. Riwayat Pendidikan</h3>
+        <ul>
             <li>SD (SDIT AL-AZHAR JAMBI)</li>
             <li>SMP (MTsN 3 Kota Jambi)</li>
             <li>SMA (Man 2 Kota Jambi)</li>
             <li>S1 (Universitas Jambi)</li>
         </ul>
-        <div class="mb-6">
-            <h3 class="text-xl font-bold">5. Pengalaman</h3>
-            <table class="table-auto w-full mb-4 border border-black">
-                <tbody>
-                    <tr>
-                        <td class="font-bold pr-4 border-2 border-black">Tahun</td>
-                        <td class="font-bold pr-4 border-2 border-black">Keterangan</td>
-                    </tr>
-                    <tr>
-                        <td class="border-2 border-black">2024</td>
-                        <td class="border-2 border-black">Magang di PT ABC sebagai web developer</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="mb-6">
-            <h3 class="text-xl font-bold">6. Kelebihan dan Kekurangan</h3>
-            <table class="table-auto w-full mb-4 border border-black">
-                <tbody>
-                    <tr>
-                        <td class="font-bold pr-4 border-2 border-black">Kelebihan</td>
-                        <td class="border-2 border-black">Menguasai HTML, CSS, dan JavaScript, PHP, Java</td>
-                    </tr>
-                    <tr>
-                        <td class="font-bold pr-4 border-2 border-black">Kekurangan</td>
-                        <td class="border-2 border-black">Belum terbiasa dengan framework web populer</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-        <div class="mb-6">
-            <h3 class="text-xl font-bold">7. Harapan 5-10 Tahun lagi</h3>
-            <p class="w-full bg-white border border-black p-4">Dalam 5-10 tahun ke depan, saya berharap dapat menjadi seorang ahli di bidang Sistem Informasi yang diakui secara luas. Saya bercita-cita untuk memimpin tim pengembangan perangkat lunak di perusahaan terkemuka atau menjadi seorang pengusaha yang sukses dengan membangun perusahaan teknologi informasi sendiri. Saya ingin terlibat dalam proyek-proyek inovatif yang dapat membawa dampak positif dalam masyarakat, baik itu dalam meningkatkan efisiensi bisnis maupun memecahkan masalah sosial melalui teknologi informasi. Saya juga berharap untuk terus belajar dan berkembang, mendapatkan sertifikasi dan keterampilan tambahan yang diperlukan untuk terus bersaing di era digital yang terus berkembang.</p>
+        <h3>5. Pengalaman</h3>
+        <table class="table">
+            <tr>
+                <th>Tahun</th>
+                <th>Keterangan</th>
+            </tr>
+            <tr>
+                <td>2024</td>
+                <td>Magang di PT ABC sebagai web developer</td>
+            </tr>
+        </table>
+
+        <h3>6. Kelebihan dan Kekurangan</h3>
+        <table class="table">
+            <tr>
+                <th>Kelebihan</th>
+                <td>Menguasai HTML, CSS, dan JavaScript, PHP, Java</td>
+            </tr>
+            <tr>
+                <th>Kekurangan</th>
+                <td>Belum terbiasa dengan framework web populer</td>
+            </tr>
+        </table>
+        <div class="hope">
+            <h3>7. Harapan 5-10 Tahun lagi</h3>
+            <div id="harapan">Dalam 5-10 tahun ke depan, saya berharap dapat menjadi seorang ahli di bidang Sistem Informasi yang diakui secara luas. Saya bercita-cita untuk memimpin tim pengembangan perangkat lunak di perusahaan terkemuka atau menjadi seorang pengusaha yang sukses dengan membangun perusahaan teknologi informasi sendiri. Saya ingin terlibat dalam proyek-proyek inovatif yang dapat membawa dampak positif dalam masyarakat, baik itu dalam meningkatkan efisiensi bisnis maupun memecahkan masalah sosial melalui teknologi informasi. Saya juga berharap untuk terus belajar dan berkembang, mendapatkan sertifikasi dan keterampilan tambahan yang diperlukan untuk terus bersaing di era digital yang terus berkembang.</div>
         </div>
     </div>
 </body>
-
 </html>
